--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "redux-simple-starter",
+  "name": "redux-video-streaming",
   "version": "1.0.0",
   "description": "Simple starter package for Redux with React and Babel support",
   "main": "index.js",
-  "repository": "git@github.com:StephenGrider/ReduxSimpleStarter.git",
+  "repository": "git@github.com:rkredux/redux-video-streaming.git",
   "scripts": {
     "start": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js",
     "test": "mocha --compilers js:babel-core/register --require ./test/test_helper.js --recursive ./test",
@@ -27,11 +27,15 @@
   },
   "dependencies": {
     "babel-preset-stage-1": "^6.1.18",
+    "jade": "^1.11.0",
     "lodash": "^3.10.1",
+    "minimatch": "^3.0.4",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
     "react-redux": "4.3.0",
     "react-router": "^2.0.1",
-    "redux": "^3.0.4"
+    "redux": "^3.0.4",
+    "to-iso-string": "0.0.2",
+    "youtube-api-search": "0.0.5"
   }
 }
